--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -37,13 +38,13 @@
                 </a>
               </div>
               <div class="social-media-content">
-                <a href="https://www.instagram.com/afiistiqlall/" target="_blank">
-                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--akar-icons" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M7.465 1.066C8.638 1.012 9.012 1 12 1c2.988 0 3.362.013 4.534.066c1.172.053 1.972.24 2.672.511c.733.277 1.398.71 1.948 1.27c.56.549.992 1.213 1.268 1.947c.272.7.458 1.5.512 2.67C22.988 8.639 23 9.013 23 12c0 2.988-.013 3.362-.066 4.535c-.053 1.17-.24 1.97-.512 2.67a5.396 5.396 0 0 1-1.268 1.949c-.55.56-1.215.992-1.948 1.268c-.7.272-1.5.458-2.67.512c-1.174.054-1.548.066-4.536.066c-2.988 0-3.362-.013-4.535-.066c-1.17-.053-1.97-.24-2.67-.512a5.397 5.397 0 0 1-1.949-1.268a5.392 5.392 0 0 1-1.269-1.948c-.271-.7-.457-1.5-.511-2.67C1.012 15.361 1 14.987 1 12c0-2.988.013-3.362.066-4.534c.053-1.172.24-1.972.511-2.672a5.396 5.396 0 0 1 1.27-1.948a5.392 5.392 0 0 1 1.947-1.269c.7-.271 1.5-.457 2.67-.511Zm8.98 1.98c-1.16-.053-1.508-.064-4.445-.064c-2.937 0-3.285.011-4.445.064c-1.073.049-1.655.228-2.043.379c-.513.2-.88.437-1.265.822a3.412 3.412 0 0 0-.822 1.265c-.151.388-.33.97-.379 2.043c-.053 1.16-.064 1.508-.064 4.445c0 2.937.011 3.285.064 4.445c.049 1.073.228 1.655.379 2.043c.176.477.457.91.822 1.265c.355.365.788.646 1.265.822c.388.151.97.33 2.043.379c1.16.053 1.507.064 4.445.064c2.938 0 3.285-.011 4.445-.064c1.073-.049 1.655-.228 2.043-.379c.513-.2.88-.437 1.265-.822c.365-.355.646-.788.822-1.265c.151-.388.33-.97.379-2.043c.053-1.16.064-1.508.064-4.445c0-2.937-.011-3.285-.064-4.445c-.049-1.073-.228-1.655-.379-2.043c-.2-.513-.437-.88-.822-1.265a3.413 3.413 0 0 0-1.265-.822c-.388-.151-.97-.33-2.043-.379Zm-5.85 12.345a3.669 3.669 0 0 0 4-5.986a3.67 3.67 0 1 0-4 5.986ZM8.002 8.002a5.654 5.654 0 1 1 7.996 7.996a5.654 5.654 0 0 1-7.996-7.996Zm10.906-.814a1.337 1.337 0 1 0-1.89-1.89a1.337 1.337 0 0 0 1.89 1.89Z" clip-rule="evenodd"></path></svg>
+                <a href="https://www.linkedin.com/in/muhamad-muafi-istiqlal-ab3033162/" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--akar-icons" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M9.429 8.969h3.714v1.85c.535-1.064 1.907-2.02 3.968-2.02c3.951 0 4.889 2.118 4.889 6.004V22h-4v-6.312c0-2.213-.535-3.461-1.897-3.461c-1.889 0-2.674 1.345-2.674 3.46V22h-4V8.969ZM2.57 21.83h4V8.799h-4V21.83ZM7.143 4.55a2.53 2.53 0 0 1-.753 1.802a2.573 2.573 0 0 1-1.82.748a2.59 2.59 0 0 1-1.818-.747A2.548 2.548 0 0 1 2 4.55c0-.677.27-1.325.753-1.803A2.583 2.583 0 0 1 4.571 2c.682 0 1.336.269 1.819.747c.482.478.753 1.126.753 1.803Z" clip-rule="evenodd"></path></svg>
                 </a>
               </div>
               <div class="social-media-content">
-                <a href="https://www.linkedin.com/in/muhamad-muafi-istiqlal-ab3033162/" target="_blank">
-                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--akar-icons" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M9.429 8.969h3.714v1.85c.535-1.064 1.907-2.02 3.968-2.02c3.951 0 4.889 2.118 4.889 6.004V22h-4v-6.312c0-2.213-.535-3.461-1.897-3.461c-1.889 0-2.674 1.345-2.674 3.46V22h-4V8.969ZM2.57 21.83h4V8.799h-4V21.83ZM7.143 4.55a2.53 2.53 0 0 1-.753 1.802a2.573 2.573 0 0 1-1.82.748a2.59 2.59 0 0 1-1.818-.747A2.548 2.548 0 0 1 2 4.55c0-.677.27-1.325.753-1.803A2.583 2.583 0 0 1 4.571 2c.682 0 1.336.269 1.819.747c.482.478.753 1.126.753 1.803Z" clip-rule="evenodd"></path></svg>
+                <a href="https://www.instagram.com/afiistiqlall/" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--akar-icons" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M7.465 1.066C8.638 1.012 9.012 1 12 1c2.988 0 3.362.013 4.534.066c1.172.053 1.972.24 2.672.511c.733.277 1.398.71 1.948 1.27c.56.549.992 1.213 1.268 1.947c.272.7.458 1.5.512 2.67C22.988 8.639 23 9.013 23 12c0 2.988-.013 3.362-.066 4.535c-.053 1.17-.24 1.97-.512 2.67a5.396 5.396 0 0 1-1.268 1.949c-.55.56-1.215.992-1.948 1.268c-.7.272-1.5.458-2.67.512c-1.174.054-1.548.066-4.536.066c-2.988 0-3.362-.013-4.535-.066c-1.17-.053-1.97-.24-2.67-.512a5.397 5.397 0 0 1-1.949-1.268a5.392 5.392 0 0 1-1.269-1.948c-.271-.7-.457-1.5-.511-2.67C1.012 15.361 1 14.987 1 12c0-2.988.013-3.362.066-4.534c.053-1.172.24-1.972.511-2.672a5.396 5.396 0 0 1 1.27-1.948a5.392 5.392 0 0 1 1.947-1.269c.7-.271 1.5-.457 2.67-.511Zm8.98 1.98c-1.16-.053-1.508-.064-4.445-.064c-2.937 0-3.285.011-4.445.064c-1.073.049-1.655.228-2.043.379c-.513.2-.88.437-1.265.822a3.412 3.412 0 0 0-.822 1.265c-.151.388-.33.97-.379 2.043c-.053 1.16-.064 1.508-.064 4.445c0 2.937.011 3.285.064 4.445c.049 1.073.228 1.655.379 2.043c.176.477.457.91.822 1.265c.355.365.788.646 1.265.822c.388.151.97.33 2.043.379c1.16.053 1.507.064 4.445.064c2.938 0 3.285-.011 4.445-.064c1.073-.049 1.655-.228 2.043-.379c.513-.2.88-.437 1.265-.822c.365-.355.646-.788.822-1.265c.151-.388.33-.97.379-2.043c.053-1.16.064-1.508.064-4.445c0-2.937-.011-3.285-.064-4.445c-.049-1.073-.228-1.655-.379-2.043c-.2-.513-.437-.88-.822-1.265a3.413 3.413 0 0 0-1.265-.822c-.388-.151-.97-.33-2.043-.379Zm-5.85 12.345a3.669 3.669 0 0 0 4-5.986a3.67 3.67 0 1 0-4 5.986ZM8.002 8.002a5.654 5.654 0 1 1 7.996 7.996a5.654 5.654 0 0 1-7.996-7.996Zm10.906-.814a1.337 1.337 0 1 0-1.89-1.89a1.337 1.337 0 0 0 1.89 1.89Z" clip-rule="evenodd"></path></svg>
                 </a>
               </div>
             </div>
@@ -55,7 +56,7 @@
               <h3>Tentang Saya</h3>
             </div>
             <div class="isi">
-              <p>Saya seorang programmer pemula, saya senang bermusik.</p>
+              <p>Saya senang dengan kecanggihan, praktis dan tidak bertele-tele meskipun terkadang menghasilkan sesuatu yang random dari pikiran saya. Saya senang Koding, dan saya rasa saya dapat melakukannya meskipun banyak kesalahan yang saya temukan. Pada waktu senggang biasanya saya bermusik.</p>
             </div>
           </div>
           <!-- pengalaman -->
@@ -64,12 +65,13 @@
               <h3>Pengalaman</h3>
             </div>
             <div class="isi">
-              <h4>Pekerjaan 1</h4>
-              <p>lorem ipsum</p>
+              <h4>IT Technician</h4>
+              <small>PT. Erima Akses Mandiri <br> Mei 2018 - Februari 2020</small>
+              <p>Bekerja sebagai teknisi IT dibidang security door. Instalasi software & hardware dan juga maintenance. Projek yang saya kerjakan khusus untuk PT.Freeport Indonesia dibawah MIS Department.</p>
               <hr />
-              <h4>Pekerjaan 2</h4>
-              <hr />
-              <h4>Pekerjaan 3</h4>
+              <h4>Project Programmer</h4>
+              <small>Universitas Pertamina <br> Maret 2020 - Saat Ini</small>
+              <p>Bekerja sebagai programmer monolithic dengan metode Agile. Biasanya saya mengembkangkan fitur - fitur pada website sesuai permintaan rekan dan atasan.</p>
             </div>
           </div>
           <!-- pendidikan -->
@@ -79,16 +81,34 @@
             </div>
             <div class="isi">
               <h4>Kuliah</h4>
-              <hr />
+              <small> Universitas Gunadarma <br> 2013 - 2017  </small>
+              <p> Kuliah jurusan Teknik Informatika dengan IPK 2.97 selama 4 tahun. </p>
+              <hr>
               <h4>Kursus</h4>
-              <hr />
-              <h4>Pelatihan</h4>
+              <small> Database Oracle <br> 2016 </small>
+              <p> Kursus yang disediakan oleh Universitas Gunadarma untuk para mahasiswanya dan bersertifikat. </p>
+              <hr>
+              <h4>Kursus</h4>
+              <small> Linux Command Line <br> 2017 </small>
+              <p> Kursus yang disediakan oleh Universitas Gunadarma untuk para mahasiswanya dan bersertifikat. </p>
+              <hr>
+              <h4>Kursus</h4>
+              <small> SoloLearn online <br> 2017 </small>
+              <p> HTML, CSS, Javascript Certificated </p>
+              <hr>
+              <h4>Kursus</h4>
+              <small> Rumah Coding Depok <br>2021 </small>
+              <p> Kursus untuk menggunakan PHP Laravel dan mendapatkan sertifikat. </p>
+              <hr>
+              <h4>Kursus</h4>
+              <small> Digitalent Kominfo <br>2022 </small>
+              <p> Kursus React Developer Javascript </p>
             </div>
           </div>
-          <!-- organisasi -->
-          <div class="box">
+          <!-- project -->
+          <!-- <div class="box">
             <div class="judul">
-              <h3>Organisasi</h3>
+              <h3>Projek</h3>
             </div>
             <div class="isi">
               <h4>Band 1</h4>
@@ -97,7 +117,7 @@
               <hr />
               <h4>Band 3</h4>
             </div>
-          </div>
+          </div> -->
           <!-- portfolio -->
           <div class="box">
             <div class="judul">
@@ -148,9 +168,8 @@
             </div>
           </div>
           <div class="about-me">
-            <p class="separator">*********************************</p>
-            <div class="special-logo"><!-- link social media -->
-              <div class="special-logo-content">_</div>
+            <!-- <p class="separator">*********************************</p> -->
+            <div class="special-logo">
               <div class="special-logo-content">_</div>
               <div class="special-logo-content">_</div>
               <div class="special-logo-content">_</div>
