--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
               <h3>Projek</h3>
             </div>
             <div class="isi">
-              <h4>Band 1</h4>
+              <h4>Android Greefy App</h4>
               <hr />
-              <h4>Band 2</h4>
+              <h4>Nitip Kirim WEB</h4>
               <hr />
-              <h4>Band 3</h4>
+              <h4>Android Best Wallpaper</h4>
             </div>
           </div> -->
           <!-- portfolio -->
@@ -125,14 +125,14 @@
             </div>
             <div class="isi">
               <div class="portfolio">
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
-                <img src="assets/fotoAfi.jpg" alt="fotoAfi" />
+                <img src="https://placekitten.com/200" alt="portfolio" />
+                <img src="https://placekitten.com/210" alt="portfolio" />
+                <img src="https://placekitten.com/220" alt="portfolio" />
+                <img src="https://placekitten.com/230" alt="portfolio" />
+                <img src="https://placekitten.com/240" alt="portfolio" />
+                <img src="https://placekitten.com/250" alt="portfolio" />
+                <img src="https://placekitten.com/190" alt="portfolio" />
+                <img src="https://placekitten.com/180" alt="portfolio" />
               </div>
             </div>
           </div>
